调整首页显示的排板

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
@@ -73,10 +73,10 @@
                         <NavLink href="/k8s/tpl/list">模板管理</NavLink>
                     </dd>
                     <dd>
-                        <NavLink href="/k8s/deploy/list">模板发布</NavLink>
+                        <NavLink href="/k8s/deploy/list">POD发布</NavLink>
                     </dd>
                     <dd>
-                        <NavLink href="/k8s/single/deploy">Single发布</NavLink>
+                        <NavLink href="/k8s/single/deploy">yaml发布</NavLink>
                     </dd>
                 </dl>
             </li>
