--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/MainLayout.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/MainLayout.razor
@@ -43,7 +43,7 @@
         <!-- 主体内容 -->
         <div class="layui-body" id="LAY_app_body">
             @* <div class="layadmin-tabsbody-item"></div> *@
-            <div class="layadmin-tabsbody-item layui-show">
+            <div class="layadmin-tabsbody-item layui-show" id="curtBody">
                 <div class="layui-fluid">
                     @Body
                 </div>
