--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/LeftMenu.razor
@@ -18,9 +18,9 @@
                             大盘
                         </NavLink>
                     </dd>
-                    <dd data-name="event">
-                        <NavLink href="home/homepage1.html">事件</NavLink>
-                    </dd>
+                    @* <dd data-name="event"> *@
+                    @*     <NavLink href="home/homepage1.html">事件</NavLink> *@
+                    @* </dd> *@
                 </dl>
             </li>
             <li data-name="fss" class="layui-nav-item">
