--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/builder/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/builder/List.razor
@@ -5,8 +5,6 @@
 @using FOPS.Abstract.MetaInfo.Server
 @using FS.Extends
 @using FOPS.Abstract.Builder.Server
-@using FOPS.Abstract.Builder.Entity
-@using FOPS.Abstract.Builder.Enum
 @using System.Timers
 @inject IIocManager _iocManager;
 @inject NavigationManager nav;
@@ -32,7 +30,7 @@
                 }
             </select>
             <div class="layui-right">
-                <button class="layui-btn layui-btn-danger" @onclick="DeployAsync"><i class="am-icon-plus"></i> 全部构建</button>
+                <button class="layui-btn layui-btn-danger" @onclick="AddAllBuild"><i class="am-icon-plus"></i> 全部构建</button>
             </div>
         </div>
         <div class="layui-card-body">
@@ -157,95 +155,7 @@
         <div class="layui-card-body">
             <div class="layui-form layui-border-box layui-table-view" lay-filter="LAY-table-1">
                 <div class="layui-table-box">
-                    <div class="layui-table-header">
-                        <table cellspacing="0" cellpadding="0" border="0" class="layui-table" lay-skin="auto" lay-size="sm">
-                            <thead>
-                            <tr>
-                                <th data-field="ID">
-                                    <div class="layui-table-cell laytable-cell-14-0-7">
-                                        <span>ID</span>
-                                    </div>
-                                </th>
-                                <th data-field="Type">
-                                    <div class="layui-table-cell laytable-cell-14-0-8">
-                                        <span>项目名称</span>
-                                    </div>
-                                </th>
-                                <th data-field="Type">
-                                    <div class="layui-table-cell laytable-cell-14-0-9">
-                                        <span>状态</span>
-                                    </div>
-                                </th>
-                                <th data-field="Type">
-                                    <div class="layui-table-cell laytable-cell-14-0-10">
-                                        <span>操作</span>
-                                    </div>
-                                </th>
-                            </tr>
-                            </thead>
-                        </table>
-                    </div>
-                    <div class="layui-table-body layui-table-main">
-                        <table cellspacing="0" cellpadding="0" border="0" class="layui-table" lay-skin="auto" lay-size="sm">
-                            <tbody>
-                            @for (var index = 0; index < _lstBuild.Count; index++)
-                            {
-                                var info = _lstBuild[index];
-                                <tr data-index="@index">
-                                    <td>
-                                        <div class="layui-table-cell laytable-cell-14-0-7"> @info.Id</div>
-                                    </td>
-                                    <td>
-                                        <div class="laytable-cell-14-0-8">
-                                            @{
-                                                var projectVO = _lst.Find(o=>o.Id==info.ProjectId);
-                                                if (projectVO == null) projectVO = _iocManager.Resolve<IProjectService>().ToInfo(info.ProjectId);
-                                            }
-                                            <a href="/builder/log/@info.Id">@projectVO.Name</a>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <div class="layui-table-cell laytable-cell-14-0-9">
-                                            @{
-                                                switch (info.Status)
-                                                {
-                                                    case EumBuildStatus.None:
-                                                        <button class="layui-btn layui-btn-xs layui-btn-primary">未开始</button>
-                                                        break;
-                                                    case EumBuildStatus.Building:
-                                                        <button class="layui-btn layui-btn-xs layui-btn-normal">构建中</button>
-                                                        break;
-                                                    case EumBuildStatus.Finish:
-                                                        if (info.IsSuccess)
-                                                        {
-                                                            <button class="layui-btn layui-btn-xs">成功</button>
-                                                        }
-                                                        else
-                                                        {
-                                                            <button class="layui-btn layui-btn-xs layui-btn-danger">失败</button>
-                                                        }
-                                                        break;
-                                                }
-                                            }
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <div class="layui-table-cell laytable-cell-14-0-10">
-                                            @{
-                                                if (info.Status == EumBuildStatus.Building)
-                                                {
-                                                    <button class="layui-btn layui-btn-radius layui-btn-xs" @onclick="() => CancelBuild(info)">
-                                                        <i class="layui-icon"></i>
-                                                    </button>
-                                                }
-                                            }
-                                        </div>
-                                    </td>
-                                </tr>
-                            }
-                            </tbody>
-                        </table>
-                    </div>
+                    <BuildList></BuildList>
                 </div>
             </div>
         </div>
@@ -276,8 +186,7 @@
     private List<ClusterVO> _lstCluster = new();
     private List<GitVO> _lstGit = new();
     private List<ProjectGroupVO> _lstGroup = new();
-    private List<BuildVO> _lstBuild = new();
-    private Timer _timer;
+    
     private int _clusterId;
     private int _groupId;
 
@@ -297,40 +206,6 @@
         if (_lstCluster != null) _clusterId = _lstCluster[0].Id;
 
         await GetList();
-        
-        _timer = new Timer(1000);
-        _timer.Elapsed += async (sender, args) =>
-        {
-            _lstBuild = await _iocManager.Resolve<IBuildService>().ToBuildingList();
-            // 刷新页面
-            await InvokeAsync(StateHasChanged);
-        };
-        _timer.Enabled = true;
-    }
-
-    private async Task DeployAsync()
-    {
-        var load = await js.InvokeAsync<int>("layer.load", 0, "{shade: false}");
-        var clusterVO = _lstCluster.Find(o => o.Id == _clusterId);
-        if (clusterVO == null)
-        {
-            await js.InvokeVoidAsync("layer.close", load);
-            await js.InvokeVoidAsync("layer.alert", "请先选择集群环境", new {icon = 0});
-            return;
-        }
-
-        var deployService = _iocManager.Resolve<IDeployService>();
-        try
-        {
-            var runShellResult = await deployService.DeployAsync(_lst, clusterVO, _lstTpl);
-            if (runShellResult.IsError) await js.InvokeVoidAsync("layer.alert", runShellResult.OutputBr, new {icon = 2, title = "出错了"});
-            else await js.InvokeVoidAsync("layer.alert", runShellResult.OutputBr, new {icon = 1, title = "执行结果"});
-        }
-        catch (Exception e)
-        {
-            await js.InvokeVoidAsync("layer.alert", e.Message, new {icon = 2, title = "出错了"});
-        }
-        await js.InvokeVoidAsync("layer.close", load);
     }
 
     private async Task ClusterChange(ChangeEventArgs args)
@@ -351,10 +226,7 @@
         _lst = await _iocManager.Resolve<IProjectService>().ToListAsync();
 
     // 如果项目组不包含当前选中的组，则移除项目
-        if (_groupId > 0)
-        {
-            _lst.RemoveAll(o => o.GroupId != _groupId);
-        }
+        if (_groupId > 0) _lst.RemoveAll(o => o.GroupId != _groupId);
 
     // 遍历项目组ID
         var projectGroupIds = _lst.Select(o => o.GroupId).ToList();
@@ -379,14 +251,10 @@
             if (gitVO == null) continue;
             projectVO.GitId = gitVO.Id;
             projectVO.GitPullAt = gitVO.PullAt;
-            projectVO.GitName = gitVO.Name;
-            projectVO.GitHub = gitVO.Hub;
 
             if (!projectVO.DicClusterVer.ContainsKey(_clusterId))
                 projectVO.DicClusterVer[_clusterId] = new ClusterVer {DockerVer = "0"};
         }
-
-        _lstBuild = await _iocManager.Resolve<IBuildService>().ToBuildingList();
     }
 
     private async Task AddBuild(ProjectVO project)
@@ -396,6 +264,24 @@
         {
             await _iocManager.Resolve<IBuildService>().Add(project.Id, _clusterId);
             await GetList();
+            await js.InvokeVoidAsync("layer.alert", "已加入到队列", new {icon = 1, title = "执行结果"});
+        }
+        catch (Exception e)
+        {
+            await js.InvokeVoidAsync("layer.alert", e.Message, new {icon = 2, title = "加入失败"});
+        }
+        await js.InvokeVoidAsync("layer.close", load);
+    }
+
+    private async Task AddAllBuild()
+    {
+        var load = await js.InvokeAsync<int>("layer.load", 0, "{shade: false}");
+        try
+        {
+            foreach (var project in _lst)
+            {
+                await _iocManager.Resolve<IBuildService>().Add(project.Id, _clusterId);
+            }
             await js.InvokeVoidAsync("layer.alert", "已加入到队列", new {icon = 1, title = "执行结果"});
         }
         catch (Exception e)
@@ -425,11 +311,5 @@
             await js.InvokeVoidAsync("layer.alert", e.Message, new {icon = 2, title = "加入失败"});
         }
         await js.InvokeVoidAsync("layer.close", load);
-    }
-
-    private async Task CancelBuild(BuildVO info)
-    {
-        await _iocManager.Resolve<IBuildService>().Cancel(info.Id);
-        await GetList();
     }
 }
