--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/Main.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/Main.razor
@@ -84,194 +84,207 @@
 </div>
 
 <div class="layui-row layui-col-space15">
-    <div class="layui-col-md8">
-        <div class="layui-row layui-col-space15">
-            <div class="layui-col-md6">
-                <div class="layui-card">
-                    <div class="layui-card-header">FSS调度中心</div>
-                    <div class="layui-card-body">
-                        <div class="layui-carousel layadmin-carousel layadmin-backlog">
-                            <div carousel-item>
-                                <ul class="layui-row layui-col-space10 layui-this">
-                                    <li class="layui-col-xs6">
-                                        <a lay-href="app/content/comment.html" class="layadmin-backlog-body">
-                                            <h3>任务数</h3>
-                                            <p>
-                                                <cite>@_taskGroupCount</cite>
-                                            </p>
-                                        </a>
-                                    </li>
-                                    <li class="layui-col-xs6">
-                                        <a lay-href="app/forum/list.html" class="layadmin-backlog-body">
-                                            <h3>未执行</h3>
-                                            <p>
-                                                <cite>@_unExecuteCount</cite>
-                                            </p>
-                                        </a>
-                                    </li>
-                                    <li class="layui-col-xs6">
-                                        <a lay-href="template/goodslist.html" class="layadmin-backlog-body">
-                                            <h3>客户端</h3>
-                                            <p>
-                                                <cite>@_clientCount</cite>
-                                            </p>
-                                        </a>
-                                    </li>
-                                    <li class="layui-col-xs6">
-                                        <a href="javascript:;" onclick="layer.tips('不跳转', this, {tips: 3});" class="layadmin-backlog-body">
-                                            <h3>今日失败</h3>
-                                            <p>
-                                                <cite>@_todayFailCount</cite>
-                                            </p>
-                                        </a>
-                                    </li>
-                                </ul>
-                                <ul class="layui-row layui-col-space10">
-                                    <li class="layui-col-xs6">
-                                        <a href="javascript:;" class="layadmin-backlog-body">
-                                            <h3>待审友情链接</h3>
-                                            <p>
-                                                <cite style="color: #FF5722;">5</cite>
-                                            </p>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
+<div class="layui-col-md8">
+    <div class="layui-row layui-col-space15">
+        <div class="layui-col-md6">
+            <div class="layui-card">
+                <div class="layui-card-header">FSS调度中心</div>
+                <div class="layui-card-body">
+                    <div class="layui-carousel layadmin-carousel layadmin-backlog">
+                        <div carousel-item>
+                            <ul class="layui-row layui-col-space10 layui-this">
+                                <li class="layui-col-xs6">
+                                    <a lay-href="app/content/comment.html" class="layadmin-backlog-body">
+                                        <h3>任务数</h3>
+                                        <p>
+                                            <cite>@_taskGroupCount</cite>
+                                        </p>
+                                    </a>
+                                </li>
+                                <li class="layui-col-xs6">
+                                    <a lay-href="app/forum/list.html" class="layadmin-backlog-body">
+                                        <h3>未执行</h3>
+                                        <p>
+                                            <cite>@_unExecuteCount</cite>
+                                        </p>
+                                    </a>
+                                </li>
+                                <li class="layui-col-xs6">
+                                    <a lay-href="template/goodslist.html" class="layadmin-backlog-body">
+                                        <h3>客户端</h3>
+                                        <p>
+                                            <cite>@_clientCount</cite>
+                                        </p>
+                                    </a>
+                                </li>
+                                <li class="layui-col-xs6">
+                                    <a href="javascript:;" onclick="layer.tips('不跳转', this, {tips: 3});" class="layadmin-backlog-body">
+                                        <h3>今日失败</h3>
+                                        <p>
+                                            <cite>@_todayFailCount</cite>
+                                        </p>
+                                    </a>
+                                </li>
+                            </ul>
+                            <ul class="layui-row layui-col-space10">
+                                <li class="layui-col-xs6">
+                                    <a href="javascript:;" class="layadmin-backlog-body">
+                                        <h3>待审友情链接</h3>
+                                        <p>
+                                            <cite style="color: #FF5722;">5</cite>
+                                        </p>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="layui-col-md6">
-                <div class="layui-card">
-                    <div class="layui-card-header">快捷方式</div>
-                    <div class="layui-card-body">
-                        <div class="layui-carousel layadmin-carousel layadmin-shortcut">
-                            <div carousel-item>
-                                <ul class="layui-row layui-col-space10 layui-this">
-                                    <li class="layui-col-xs3">
-                                        <NavLink href="/builder/list">
-                                            <i class="layui-icon layui-icon-console"></i>
-                                            <cite>构建</cite>
-                                        </NavLink>
-                                    </li>
-                                    <li class="layui-col-xs3">
-                                        <NavLink href="/k8s/deploy/list">
-                                            <i class="layui-icon layui-icon-chat"></i>
-                                            <cite>POD发布</cite>
-                                        </NavLink>
-                                    </li>
-                                    <li class="layui-col-xs3">
-                                        <NavLink href="/k8s/single/deploy">
-                                            <i class="layui-icon layui-icon-find-fill"></i>
-                                            <cite>yaml发布</cite>
-                                        </NavLink>
-                                    </li>
-                                    <li class="layui-col-xs3">
-                                        <NavLink href="/project/list">
-                                            <i class="layui-icon layui-icon-template-1"></i>
-                                            <cite>项目设置</cite>
-                                        </NavLink>
-                                    </li>
-                                    <li class="layui-col-xs3">
-                                        <NavLink class="nav-link" href="/fss/task_group/list" Match="NavLinkMatch.All">
-                                            <i class="layui-icon layui-icon-chart"></i>
-                                            <cite>FSS任务组</cite>
-                                        </NavLink>
-                                    </li>
-                                    <li class="layui-col-xs3">
-                                        <NavLink class="nav-link" href="/fss/client/list" Match="NavLinkMatch.All">
-                                            <i class="layui-icon layui-icon-set"></i>
-                                            <cite>FSS客户端</cite>
-                                        </NavLink>
-                                    </li>
-                                    <li class="layui-col-xs3">
-                                        <NavLink href="/docker/tpl/list">
-                                            <i class="layui-icon layui-icon-survey"></i>
-                                            <cite>容器模板</cite>
-                                        </NavLink>
-                                    </li>
-                                    <li class="layui-col-xs3">
-                                        <NavLink href="/k8s/tpl/list">
-                                            <i class="layui-icon layui-icon-user"></i>
-                                            <cite>K8S模板</cite>
-                                        </NavLink>
-                                    </li>
-                                </ul>
-                            </div>
+        </div>
+        <div class="layui-col-md6">
+            <div class="layui-card">
+                <div class="layui-card-header">快捷方式</div>
+                <div class="layui-card-body">
+                    <div class="layui-carousel layadmin-carousel layadmin-shortcut">
+                        <div carousel-item>
+                            <ul class="layui-row layui-col-space10 layui-this">
+                                <li class="layui-col-xs3">
+                                    <NavLink href="/builder/list">
+                                        <i class="layui-icon layui-icon-console"></i>
+                                        <cite>构建</cite>
+                                    </NavLink>
+                                </li>
+                                <li class="layui-col-xs3">
+                                    <NavLink href="/k8s/deploy/list">
+                                        <i class="layui-icon layui-icon-chat"></i>
+                                        <cite>POD发布</cite>
+                                    </NavLink>
+                                </li>
+                                <li class="layui-col-xs3">
+                                    <NavLink href="/k8s/single/deploy">
+                                        <i class="layui-icon layui-icon-find-fill"></i>
+                                        <cite>yaml发布</cite>
+                                    </NavLink>
+                                </li>
+                                <li class="layui-col-xs3">
+                                    <NavLink href="/project/list">
+                                        <i class="layui-icon layui-icon-template-1"></i>
+                                        <cite>项目设置</cite>
+                                    </NavLink>
+                                </li>
+                                <li class="layui-col-xs3">
+                                    <NavLink class="nav-link" href="/fss/task_group/list" Match="NavLinkMatch.All">
+                                        <i class="layui-icon layui-icon-chart"></i>
+                                        <cite>FSS任务组</cite>
+                                    </NavLink>
+                                </li>
+                                <li class="layui-col-xs3">
+                                    <NavLink class="nav-link" href="/fss/client/list" Match="NavLinkMatch.All">
+                                        <i class="layui-icon layui-icon-set"></i>
+                                        <cite>FSS客户端</cite>
+                                    </NavLink>
+                                </li>
+                                <li class="layui-col-xs3">
+                                    <NavLink href="/docker/tpl/list">
+                                        <i class="layui-icon layui-icon-survey"></i>
+                                        <cite>容器模板</cite>
+                                    </NavLink>
+                                </li>
+                                <li class="layui-col-xs3">
+                                    <NavLink href="/k8s/tpl/list">
+                                        <i class="layui-icon layui-icon-user"></i>
+                                        <cite>K8S模板</cite>
+                                    </NavLink>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="layui-col-md4">
-        <div class="layui-card">
-            <div class="layui-card-header">版本信息</div>
-            <div class="layui-card-body layui-text">
-                <table class="layui-table">
-                    <colgroup>
-                        <col width="100">
-                        <col>
-                    </colgroup>
-                    <tbody>
-                    <tr>
-                        <td>当前版本</td>
-                        <td>
-                            V1.0.0-beta.1
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>基于框架</td>
-                        <td>
-                            .NET5 + Blazor
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>主要特色</td>
-                        <td>开发人员的运维管理平台</td>
-                    </tr>
-                    <tr>
-                        <td>开源下载</td>
-                        <td style="padding-bottom: 0;">
-                            <div class="layui-btn-container">
-                                <a href="https://github.com/FarseerNet/FOPS" target="_blank" class="layui-btn layui-btn-danger">Github</a>
-                                <a href="https://gitee.com/FarseerNet/FOPS" target="_blank" class="layui-btn">Gitee</a>
-                            </div>
-                        </td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
+</div>
+<div class="layui-col-md4">
+    <div class="layui-card">
+        <div class="layui-card-header" id="anchor-play-header">
+            构建队列
         </div>
-
-        <div class="layui-card">
-            <div class="layui-card-header">效果报告</div>
-            <div class="layui-card-body layadmin-takerates">
-                <div class="layui-progress" lay-showPercent="yes">
-                    <h3>转化率（日同比 28% <span class="layui-edge layui-edge-top" lay-tips="增长" lay-offset="-15"></span>）</h3>
-                    <div class="layui-progress-bar" lay-percent="65%"></div>
-                </div>
-                <div class="layui-progress" lay-showPercent="yes">
-                    <h3>签到率（日同比 11% <span class="layui-edge layui-edge-bottom" lay-tips="下降" lay-offset="-15"></span>）</h3>
-                    <div class="layui-progress-bar" lay-percent="32%"></div>
-                </div>
-            </div>
-        </div>
-
-        <div class="layui-card">
-            <div class="layui-card-header">实时监控</div>
-            <div class="layui-card-body layadmin-takerates">
-                <div class="layui-progress" lay-showPercent="yes">
-                    <h3>CPU使用率</h3>
-                    <div class="layui-progress-bar" lay-percent="58%"></div>
-                </div>
-                <div class="layui-progress" lay-showPercent="yes">
-                    <h3>内存占用率</h3>
-                    <div class="layui-progress-bar layui-bg-red" lay-percent="90%"></div>
+        <div class="layui-card-body">
+            <div class="layui-form layui-border-box layui-table-view" lay-filter="LAY-table-1">
+                <div class="layui-table-box">
+                    <BuildList></BuildList>
                 </div>
             </div>
         </div>
     </div>
+
+    <div class="layui-card">
+        <div class="layui-card-header">版本信息</div>
+        <div class="layui-card-body layui-text">
+            <table class="layui-table">
+                <colgroup>
+                    <col width="100">
+                    <col>
+                </colgroup>
+                <tbody>
+                <tr>
+                    <td>当前版本</td>
+                    <td>
+                        V1.0.0-beta.1
+                    </td>
+                </tr>
+                <tr>
+                    <td>基于框架</td>
+                    <td>
+                        .NET5 + Blazor
+                    </td>
+                </tr>
+                <tr>
+                    <td>主要特色</td>
+                    <td>开发人员的运维管理平台</td>
+                </tr>
+                <tr>
+                    <td>开源下载</td>
+                    <td style="padding-bottom: 0;">
+                        <div class="layui-btn-container">
+                            <a href="https://github.com/FarseerNet/FOPS" target="_blank" class="layui-btn layui-btn-danger">Github</a>
+                            <a href="https://gitee.com/FarseerNet/FOPS" target="_blank" class="layui-btn">Gitee</a>
+                        </div>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <div class="layui-card">
+        <div class="layui-card-header">效果报告</div>
+        <div class="layui-card-body layadmin-takerates">
+            <div class="layui-progress" lay-showPercent="yes">
+                <h3>转化率（日同比 28% <span class="layui-edge layui-edge-top" lay-tips="增长" lay-offset="-15"></span>）</h3>
+                <div class="layui-progress-bar" lay-percent="65%"></div>
+            </div>
+            <div class="layui-progress" lay-showPercent="yes">
+                <h3>签到率（日同比 11% <span class="layui-edge layui-edge-bottom" lay-tips="下降" lay-offset="-15"></span>）</h3>
+                <div class="layui-progress-bar" lay-percent="32%"></div>
+            </div>
+        </div>
+    </div>
+
+    <div class="layui-card">
+        <div class="layui-card-header">实时监控</div>
+        <div class="layui-card-body layadmin-takerates">
+            <div class="layui-progress" lay-showPercent="yes">
+                <h3>CPU使用率</h3>
+                <div class="layui-progress-bar" lay-percent="58%"></div>
+            </div>
+            <div class="layui-progress" lay-showPercent="yes">
+                <h3>内存占用率</h3>
+                <div class="layui-progress-bar layui-bg-red" lay-percent="90%"></div>
+            </div>
+        </div>
+    </div>
+</div>
 </div>
 
 @code
