--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/Main.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/Main.razor
@@ -286,6 +286,12 @@
     </div>
 </div>
 </div>
+<style>
+    .laytable-cell-14-0-7{ width: 70px; }
+    .laytable-cell-14-0-8{ width: 150px; }
+    .laytable-cell-14-0-9{ width: 80px; }
+    .laytable-cell-14-0-10{ width: 80px; }
+</style>
 
 @code
 {
