调整首页排版

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/TaskList.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/TaskList.razor
@@ -64,16 +64,16 @@
                     <div class="layui-table-cell laytable-cell-task-2">@info.StartAt.ToString("yyyy-MM-dd HH:mm:ss")</div>
                 </td>
                 <td>
-                    <div class="laytable-cell-task-3">@info.Progress%</div>
+                    <div class="layui-table-cell laytable-cell-task-3">@info.Progress%</div>
                 </td>
                 <td>
-                    <div class="laytable-cell-task-4">@info.Status.GetName()</div>
+                    <div class="layui-table-cell laytable-cell-task-4">@info.Status.GetName()</div>
                 </td>
                 <td>
-                    <div class="laytable-cell-task-5">@info.ClientIp</div>
+                    <div class="layui-table-cell laytable-cell-task-5">@info.ClientIp</div>
                 </td>
                 <td>
-                    <div class="laytable-cell-task-6">@info.CreateAt.ToString("yyyy-MM-dd HH:mm:ss")</div>
+                    <div class="layui-table-cell laytable-cell-task-6">@info.CreateAt.ToString("yyyy-MM-dd HH:mm:ss")</div>
                 </td>
             </tr>
         }
@@ -81,7 +81,7 @@
     </table>
 </div>
 <style>
-.laytable-cell-task-1 {width: 80px;}
+.laytable-cell-task-1 {width: 300px;}
 .laytable-cell-task-2 {width: 150px;}
 .laytable-cell-task-3 {width: 80px;}
 .laytable-cell-task-4 {width: 80px;}
