任务，只显示非完成状态的列表

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/Main.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/Main.razor
@@ -207,7 +207,7 @@
             <div class="layui-col-md14">
                 <div class="layui-card">
                     <div class="layui-card-header" id="anchor-play-header">
-                        正在执行的任务
+                        进行中的任务
                     </div>
                     <div class="layui-card-body">
                         <div class="layui-form layui-border-box layui-table-view" lay-filter="LAY-table-1">
