优化数据库

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/_Host.cshtml
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/_Host.cshtml
@@ -24,7 +24,7 @@
 <component type="typeof(App)" render-mode="ServerPrerendered"/>
 <script src="/_framework/blazor.server.js"></script>
 <script src="/layuiadmin/layui/layui.js"></script>
-<script src="/layuiadmin/layui/layui.extend.js"></script>
+@* <script src="/layuiadmin/layui/layui.extend.js"></script> *@
 <script type="text/javascript">
   var layuiConfig=layui.config({
     base: '/layuiadmin/' //静态资源所在路径
