集群配置，改成自己创建方式

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/cluster/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/cluster/List.razor
@@ -65,7 +65,7 @@
                                 </td>
                                 <td data-field="Type">
                                     <div class="layui-table-cell laytable-cell-14-0-3">
-                                        @info.ConfigName
+                                        @info.Config
                                     </div>
                                 </td>
                             </tr>
