--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/TaskList.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/TaskList.razor
@@ -24,7 +24,7 @@
             </th>
             <th data-field="Type">
                 <div class="layui-table-cell laytable-cell-task-2">
-                    <span>开始时间</span>
+                    <span>计划时间</span>
                 </div>
             </th>
             <th data-field="Type">
