修改集群的字段、样式

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/cluster/Add.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/k8s/cluster/Add.razor
@@ -37,7 +37,7 @@
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">kubectl配置</label>
-            <div class="layui-input-inline">
+            <div class="layui-input-block" style="margin-left: 150px;">
                 <textarea @bind="_info.Config" placeholder="请输入kubectl配置" class="layui-textarea" style="margin-top: 0; margin-bottom: 0; height: 400px;"></textarea>
             </div>
         </div>
